feat: add restrictiveness analysis
